--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <p>первый файл</p>
   <p>изменения для новой ветки 1</p>
   <p>изменения для новой ветки 2</p>
+
+  <p>делаю изменения и хочу сделать ресет софт </p>
 </body>
 </html>
